# JP-Morgan-Chase-Co-Quantitative-Research-Simulation

quant-research-portfolio/: README.md  pyproject.toml
quant-research-portfolio/data/raw/: README.md
quant-research-portfolio/data/sample/: Loan_Data_sample.csv
quant-research-portfolio/docs/: methodology.md
quant-research-portfolio/scripts/: demo_credit.py  demo_natgas.py
quant-research-portfolio/src/quant_portfolio/credit/: fico_quantization.py  pd_model.py
quant-research-portfolio/src/quant_portfolio/natgas/: price_forecast.py  storage_contract.py
quant-research-portfolio/tests/: test_credit.py  test_natgas.py
